--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <style>
 body {
 height: 100vh;
+margin: 0;
+padding: 0;
 font-family: sans-serif;
 display: grid; 
 place-items: center;
@@ -13,5 +15,6 @@ place-items: center;
 </head>
 <body>
 <h1>Saffronlist</h1>
+<a href="https://raw.githubusercontent.com/saffronlist/saffronlist/go/all.txt">Get it here!</a>
 </body>
 </html>
